# toolsuit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
examples/: 01_hide_and_inject.py  02_mask_output.py  03_map_inputs.py  04_all_pillars_combined.py  05_docstring_override.py
src/toolsuit/: __init__.py  core.py
tests/: test_core.py
