[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolsuit"
version = "0.1.0"
description = "A lightweight wrapper to tailor and secure your Python functions for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pre-commit>=3.0.0", "black>=23.0.0", "ruff>=0.0.280"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]